# neo4j-mpgnn-thesis

./: .gitignore  LICENSE  Makefile  Neo4jArrowClient.py  PyG_contribution_ideas.md  RAM-experiment-plan.md  README.md  REPRODUCIBILITY.md  cpy.sh  cypher-gnn-sampling-proof.md  cypher_expressiviness.md  example.env  main.py  pyproject.toml  run_benchmark.py  run_experiment.sh  tmp  wc
.antigravitycli/: 01638c85-29d7-4945-845f-13d8f8261264.json
.cursor/plans/: sampler_bug-fix_review_90c234f6.plan.md
GNN-implementations/: DistributedTraining.py  Measurer.py  Model.py  Trainer.py  Training.py  db_config.json  evaluate.py  main.py  train_config.json
GNN-implementations/Baseline-multisampler/: main.py
GNN-implementations/Cache-multisampler/: arxiv.py  cora.py  main.py
GNN-implementations/DB-baseline-implementation/: arxiv.py  cora.py  main.py
GNN-implementations/DB-cache-implementation/: Neo4jGraphStore.py  arxiv.py  cora.py  main.py
GNN-implementations/DB-picklesafe-implementation/: Model.py  Neo4jFeatureStore.py  main.py
GNN-implementations/Distributed-GPU-implementation/: main.py
GNN-implementations/GPU-implementation/: Trainer.py  evaluate.py  main.py
GNN-implementations/In-memory-implementation/: CustomSampler.py  InMemoryFeatureStore.py  InMemoryGraph.py  Main.py
GNN-implementations/benchmark_tools/: Measurer.py  __init__.py  config_writer.py  measurements_plots.py  measurements_summary.py
GNN-implementations/benchmarking_tools/: CPU_utilization_logger.py  Measurer.py  __init__.py  measurements_plots.py  measurements_summary.py
InMemoryGNNExample/: CustomSampler.py  InMemoryGraph.py  Main.py
experiment-results/: example_result.json
infra/: main.tf
licenses/: .gitignore  add_license.sh  readme.txt
neo4j-gcn-plugin/: neo4j.conf.example  pom.xml
pickle-safe/: Trainer.py
profiles/: InMemoryGNNExample_Main.prof  InMemoryGNNExample_Main.txt  description.txt  remote_backend_main.prof  remote_backend_main.txt
remote_backend/: Neo4jFeatureStore.py  Neo4jGraphStore.py  Neo4jSampler.py  main.py  pickle_test.py
src/: Neo4jConnection.py  Training.py  create_inference_spec.py  saint_config.json  test_inference_spec.py  train_config.json
tests/: test_redis_cache.py
thesis/: ClassicThesis.aux  ClassicThesis.blg  ClassicThesis.fdb_latexmk  ClassicThesis.fls  ClassicThesis.lof  ClassicThesis.lot  ClassicThesis.run.xml  ClassicThesis.tex  ClassicThesis.toc  ClassicThesis1-blx.bbl  ClassicThesis1-blx.blg  blank_thesis_template.fdb_latexmk  blank_thesis_template.fls  blank_thesis_template.tex  classicthesis-config.tex  classicthesis.sty
thesis-plan/: thesis_plan.md
thesis_outline/: thesis_plan.md
thesis_plan/: thesis_plan.md
(+1414 files in other folders)
